--- a/Code/UI/EscapeMenu.razor
+++ b/Code/UI/EscapeMenu.razor
@@ -9,7 +9,7 @@
 	<div class="body">
 		<div class="buttons">
 			<div class="button" onclick="@(() => OnClose())">Resume</div>
-			<div class="button" onclick="@(() => OnRestart())">Restart</div>
+			<div class="button" onclick="@(() => OnResetBall())">Reset Ball</div>
 			<div class="button" onclick="@(() => OnQuit())">Quit</div>
 		</div>
 	</div>
@@ -33,6 +33,8 @@
 	GameObject ball;
 	GameObject gameOver;
 	bool isEnabled = false;
+	float resetTimer = 0;
+	bool isTimerActive = false;
 
 	protected override void OnEnabled()
 	{
@@ -42,6 +44,17 @@
 
 	protected override void OnUpdate()
 	{
+		if (isTimerActive)
+		{
+			resetTimer += Time.Delta;
+			if (resetTimer >= 1f)
+			{
+				ball.GetComponent<Ball>().Start();
+				resetTimer = 0;
+				isTimerActive = false;
+			}
+		}
+
 		if (gameOver.Enabled)
 		{
 			isEnabled = false;
@@ -85,17 +98,18 @@
 		isEnabled = false;
 	}
 
-	void OnRestart()
+	void OnResetBall()
 	{
-		ball.GetComponent<Ball>().Start();
+		isTimerActive = true;
 	}
 
 	void OnQuit()
 	{
 		Scene.LoadFromFile("scenes/Lobby.scene");
 	}
+
 	/// <summary>
 	/// the hash determines if the system should be rebuilt. If it changes, it will be rebuilt
 	/// </summary>
-	protected override int BuildHash() => System.HashCode.Combine( isEnabled);
+	protected override int BuildHash() => System.HashCode.Combine( isEnabled );
 }
