--- a/Code/UI/LobbyMenu.razor
+++ b/Code/UI/LobbyMenu.razor
@@ -33,6 +33,7 @@
 					<div class="name">
 						@if (Networking.IsHost)
 						{
+							<div>[Host]</div>
 							if (player != Connection.Local)
 							{
 								<div class="prefix" onclick="@(() => player.Kick("You were kicked by the host"))">❌</div>
@@ -76,13 +77,11 @@
 			<div class="option">
 				<label class="option_name">Number of Rounds:</label>
 				<div class="adjuster">
-					<label class="option_adjust" onclick="@(() => { var rounds = MaxRounds; ChangeValue("decrement", ref rounds, 1, 100); MaxRounds = rounds; })">-100</label>
 					<label class="option_adjust" onclick="@(() => { var rounds = MaxRounds; ChangeValue("decrement", ref rounds, 1, 10); MaxRounds = rounds; })">-10</label>
 					<label class="option_adjust" onclick="@(() => { var rounds = MaxRounds; ChangeValue("decrement", ref rounds, 1, 1); MaxRounds = rounds; })">-1</label>
 					<label class="option_value">@MaxRounds</label>
 					<label class="option_adjust" onclick="@(() => { var rounds = MaxRounds; ChangeValue("increment", ref rounds, 1, 1); MaxRounds = rounds; })">+1</label>
 					<label class="option_adjust" onclick="@(() => { var rounds = MaxRounds; ChangeValue("increment", ref rounds, 1, 10); MaxRounds = rounds; })">+10</label>
-					<label class="option_adjust" onclick="@(() => { var rounds = MaxRounds; ChangeValue("increment", ref rounds, 1, 100); MaxRounds = rounds; })">+100</label>
 				</div>
 			</div>
 
@@ -91,9 +90,7 @@
 				<div class="adjuster">
 					<label class="option_adjust" onclick="@(() => { var speed = Speed; ChangeValue("decrement", ref speed, 100, 100); Speed = speed; })">-100</label>
 					<label class="option_adjust" onclick="@(() => { var speed = Speed; ChangeValue("decrement", ref speed, 100, 10); Speed = speed; })">-10</label>
-					<label class="option_adjust" onclick="@(() => { var speed = Speed; ChangeValue("decrement", ref speed, 100, 1); Speed = speed; })">-1</label>
 					<label class="option_value">@Speed</label>
-					<label class="option_adjust" onclick="@(() => { var speed = Speed; ChangeValue("increment", ref speed, 100, 1); Speed = speed; })">+1</label>
 					<label class="option_adjust" onclick="@(() => { var speed = Speed; ChangeValue("increment", ref speed, 100, 10); Speed = speed; })">+10</label>
 					<label class="option_adjust" onclick="@(() => { var speed = Speed; ChangeValue("increment", ref speed, 100, 100); Speed = speed; })">+100</label>
 				</div>
@@ -138,20 +135,14 @@
 
 		@if (Networking.IsHost)
 		{
-			<div class="button play" onclick="@(() => OnPlay())">
-				<label class="play">Play</label>
-			</div>
+			<div class="button play" onclick="@(() => OnPlay())">Play</div>
 		}
 		else
 		{
-			<div class="button disabled">
-				<label class="play">Waiting for the host</label>
-			</div>
+			<div class="button disabled">Waiting for the host</div>
 		}
 
-		<div class="button exit" onclick="@(() => OnLeaveLobby())">
-			<label class="exit">Leave Lobby</label>
-		</div>
+		<div class="button exit" onclick="@(() => OnLeaveLobby())">Leave</div>
 
 	</div>
 </root>
