--- a/Code/UI/LobbyMenu.razor.scss
+++ b/Code/UI/LobbyMenu.razor.scss
@@ -68,6 +68,7 @@ LobbyMenu
 			{
 				// background-color: #00000082;
 				background-color: $bg-light;
+				sound-in: none;
 			}
 		}
 	}
@@ -126,13 +127,19 @@ LobbyMenu
 			margin: 1px;
 			width: 25vw;
 			display: flex;
-			justify-content: space-between;
 			align-items: flex-start;
+			flex-grow: 1;
+			justify-content: space-between;
 			// background-color: #0000001f;
 			background-color: $bg-light;
 			border-radius: 3px;
-			cursor: pointer;
 			
+			.prefix
+			{
+				margin-right: 10px;
+				cursor: pointer;
+			}
+
 			.name
 			{
 				
@@ -140,7 +147,7 @@ LobbyMenu
 	
 			.ping
 			{
-				
+
 			}
 
 		}
@@ -224,6 +231,112 @@ LobbyMenu
 			}
 		}
 	}
+
+	.panel_background
+	{
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		backdrop-filter: blur(1px);
+		background-color: $bg-dark;
+		opacity: .8;
+
+		.palette
+		{
+			opacity: 1.45;
+			position: absolute;
+			top: 38%;
+			bottom: 38%;
+			left: 28%;
+			right: 28%;
+			flex-direction: column;
+			background: linear-gradient($bg-light, $bg);
+			padding: 30px;
+			border-radius: 5px;
+			font-size: 30px;
+
+			.colors
+			{
+				flex-direction: row;
+				flex-wrap: wrap;
+				flex-grow: 1;
+				align-self: center;
+				gap: 20px;
+				
+				.color
+				{
+					border: $bg-light 2px solid;
+					height: 40px;
+					width: 90px;
+					cursor: pointer;
+		
+					&:hover
+					{
+						transition: all 0.15s ease;
+						sound-in: ui.button.over;
+						border: $border 2px solid;
+					}
+		
+					&:active
+					{
+						transition: all 0.05s ease;
+						sound-in: ui.button.press;
+						border: $highlight 2px solid;
+					}
+		
+					&.blue{
+						background-color: #0000AA;
+					}
+					&.green{
+						background-color: #00AA00;
+					}
+					&.cyan{
+						background-color: #00AAAA;
+					}
+					&.red{
+						background-color: #AA0000;
+					}
+					&.magenta{
+						background-color: #AA00AA;
+					}
+					&.brown{
+						background-color: #AA5500;
+					}
+					&.gray{
+						background-color: gray;
+					}
+					&.lightblue{
+						background-color: #5555FF;
+					}
+					&.lightgreen{
+						background-color: #55FF55;
+					}
+					&.lightcyan{
+						background-color: #55FFFF;
+					}
+					&.lightred{
+						background-color: #FF5555;
+					}
+					&.lightmagenta{
+						background-color: #FF55FF;
+					}
+					&.yellow{
+						background-color: #FFFF55;
+					}
+					&.white{
+						background-color: #FFFFFF;
+					}
+				}
+			}
+		}
+
+		&.hidden
+		{
+			opacity: 0;
+		}
+	}
 }
 
 .footer
@@ -235,6 +348,11 @@ LobbyMenu
     align-items: flex-start;
 	bottom: 50px;
 	
+	.left
+	{
+		gap: 10px;
+	}
+
 	.button
 	{
 		padding: 30px, 40px;
