--- a/Code/UI/PlayerHud.razor
+++ b/Code/UI/PlayerHud.razor
@@ -74,5 +74,5 @@
 	/// <summary>
 	/// the hash determines if the system should be rebuilt. If it changes, it will be rebuilt
 	/// </summary>
-	protected override int BuildHash() => System.HashCode.Combine( PlayerHost, PlayerGuest, HostScore, GuestScore, gameManager  );
+	protected override int BuildHash() => System.HashCode.Combine( PlayerHost, PlayerGuest, HostScore, GuestScore  );
 }
