--- a/Code/UI/MainMenu.razor.scss
+++ b/Code/UI/MainMenu.razor.scss
@@ -307,11 +307,15 @@ MainMenu
 		
 					&:hover
 					{
+						transition: all 0.15s ease;
+						sound-in: ui.button.over;
 						border: $border 2px solid;
 					}
 		
 					&:active
 					{
+						transition: all 0.05s ease;
+						sound-in: ui.button.press;
 						border: $highlight 2px solid;
 					}
 		
