--- a/Code/UI/EscapeMenu.razor.scss
+++ b/Code/UI/EscapeMenu.razor.scss
@@ -89,15 +89,65 @@ EscapeMenu
 {
 	flex-direction: column;
 	position: absolute;
-	right: 10%;
 	// background-color: #0000004b;
 	background: linear-gradient($bg-light, $bg);
 	padding: 20px, 30px;
 	border-radius: 5px;
 	font-size: 22px;
 	
+	&.right
+	{
+		right: 10%;
+	}
+	&.left
+	{
+		left: 10%;
+	}
+
+	.playerlist
+	{
+		flex-direction: column;
+		background-color: #0000004b;
+		border-radius: 5px;
+		padding: 20px;
+		align-self: center;
+		background-color: $bg;
+		
+		.player
+		{
+			padding: 10px;
+			margin: 1px;
+			width: 25vw;
+			display: flex;
+			align-items: flex-start;
+			flex-grow: 1;
+			justify-content: space-between;
+			// background-color: #0000001f;
+			background-color: $bg-light;
+			border-radius: 3px;
+			
+			.prefix
+			{
+				margin-right: 10px;
+				cursor: pointer;
+			}
+
+			.name
+			{
+				
+			}
+	
+			.ping
+			{
+
+			}
+
+		}
+	}
+
 	.option
 	{
+		right: 10%;
 		padding: 10px;
 		justify-content: space-between;
 		align-items: center;
