--- a/Code/UI/LobbyMenu.razor
+++ b/Code/UI/LobbyMenu.razor
@@ -137,17 +137,17 @@
 				<div class="colors">
 					<div class="color blue" onclick="@(() => PickColor("blue"))"></div>
 					<div class="color green" onclick="@(() => PickColor("green"))"></div>
-					<div class="color cyan" onclick="@(() => PickColor("cyan"))"></div>
+					<div class="color darkcyan" onclick="@(() => PickColor("darkcyan"))"></div>
 					<div class="color red" onclick="@(() => PickColor("red"))"></div>
-					<div class="color magenta" onclick="@(() => PickColor("magenta"))"></div>
-					<div class="color brown" onclick="@(() => PickColor("brown"))"></div>
-					@* <div class="color gray" onclick="@(() => PickColor("gray"))"></div>
+					<div class="color purple" onclick="@(() => PickColor("purple"))"></div>
+					<div class="color saddlebrown" onclick="@(() => PickColor("saddlebrown"))"></div>
+					<div class="color gray" onclick="@(() => PickColor("gray"))"></div>
 					<div class="color lightblue" onclick="@(() => PickColor("lightblue"))"></div>
 					<div class="color lightgreen" onclick="@(() => PickColor("lightgreen"))"></div>
-					<div class="color lightcyan" onclick="@(() => PickColor("lightcyan"))"></div>
-					<div class="color lightred" onclick="@(() => PickColor("lightred"))"></div>
-					<div class="color lightmagenta" onclick="@(() => PickColor("lightmagenta"))"></div> *@
-					@* <div class="color yellow" onclick="@(() => PickColor("yellow"))"></div> *@
+					<div class="color lightcyan" onclick="@(() => PickColor("cyan"))"></div>
+					<div class="color lightcoral" onclick="@(() => PickColor("lightcoral"))"></div>
+					<div class="color violet" onclick="@(() => PickColor("violet"))"></div>
+					<div class="color yellow" onclick="@(() => PickColor("yellow"))"></div>
 					<div class="color white" onclick="@(() => PickColor("white"))"></div>
 				</div>
 
