main menu colors

--- a/Code/UI/MainMenu.razor.scss
+++ b/Code/UI/MainMenu.razor.scss
@@ -323,40 +323,40 @@ MainMenu
 						background-color: #0000AA;
 					}
 					&.green{
-						background-color: #00AA00;
+						background-color: #018001;
 					}
-					&.cyan{
-						background-color: #00AAAA;
+					&.darkcyan{
+						background-color: darkcyan;
 					}
 					&.red{
 						background-color: #AA0000;
 					}
-					&.magenta{
-						background-color: #AA00AA;
+					&.purple{
+						background-color: purple;
 					}
-					&.brown{
-						background-color: #AA5500;
+					&.saddlebrown{
+						background-color: #8B4513;
 					}
 					&.gray{
 						background-color: gray;
 					}
 					&.lightblue{
-						background-color: #5555FF;
+						background-color: #3a67f0;
 					}
 					&.lightgreen{
-						background-color: #55FF55;
+						background-color: #70d972;
 					}
 					&.lightcyan{
 						background-color: #55FFFF;
 					}
-					&.lightred{
-						background-color: #FF5555;
+					&.lightcoral{
+						background-color: #F08080;
 					}
-					&.lightmagenta{
-						background-color: #FF55FF;
+					&.violet{
+						background-color: violet;
 					}
 					&.yellow{
-						background-color: #FFFF55;
+						background-color: yellow;
 					}
 					&.white{
 						background-color: #FFFFFF;
