--- a/Code/UI/LobbyMenu.razor
+++ b/Code/UI/LobbyMenu.razor
@@ -78,7 +78,7 @@
 			</div> *@
 
 			<div class="option">
-				<label class="option_name">Number of Rounds:</label>
+				<label class="option_name">Rounds:</label>
 				<div class="adjuster">
 					<label class="option_adjust" onclick="@(() => { var rounds = MaxRounds; ChangeValue("decrement", ref rounds, 1, 10); MaxRounds = rounds; })">-10</label>
 					<label class="option_adjust" onclick="@(() => { var rounds = MaxRounds; ChangeValue("decrement", ref rounds, 1, 1); MaxRounds = rounds; })">-1</label>
@@ -132,29 +132,6 @@
 
 		</div>
 
-		<div class="panel_background @(paletteVisible ? "" : "hidden")">
-			<div class="palette">
-				<div class="colors">
-					<div class="color blue" onclick="@(() => PickColor("blue"))"></div>
-					<div class="color green" onclick="@(() => PickColor("green"))"></div>
-					<div class="color darkcyan" onclick="@(() => PickColor("darkcyan"))"></div>
-					<div class="color red" onclick="@(() => PickColor("red"))"></div>
-					<div class="color purple" onclick="@(() => PickColor("purple"))"></div>
-					<div class="color saddlebrown" onclick="@(() => PickColor("saddlebrown"))"></div>
-					<div class="color gray" onclick="@(() => PickColor("gray"))"></div>
-					<div class="color lightblue" onclick="@(() => PickColor("lightblue"))"></div>
-					<div class="color lightgreen" onclick="@(() => PickColor("lightgreen"))"></div>
-					<div class="color lightcyan" onclick="@(() => PickColor("cyan"))"></div>
-					<div class="color lightcoral" onclick="@(() => PickColor("lightcoral"))"></div>
-					<div class="color violet" onclick="@(() => PickColor("violet"))"></div>
-					<div class="color yellow" onclick="@(() => PickColor("yellow"))"></div>
-					<div class="color white" onclick="@(() => PickColor("white"))"></div>
-				</div>
-
-				<div class="button back" onclick="@(() => TogglePalette())">Back</div>
-			</div>
-		</div>
-
 	</div>
 
 	<div class="footer">
@@ -174,6 +151,29 @@
 
 		<div class="button exit" onclick="@(() => OnLeaveLobby())">Leave</div>
 
+	</div>
+
+	<div class="panel_background @(paletteVisible ? "" : "hidden")">
+		<div class="palette">
+			<div class="colors">
+				<div class="color blue" onclick="@(() => PickColor("blue"))"></div>
+				<div class="color green" onclick="@(() => PickColor("green"))"></div>
+				<div class="color darkcyan" onclick="@(() => PickColor("darkcyan"))"></div>
+				<div class="color red" onclick="@(() => PickColor("red"))"></div>
+				<div class="color purple" onclick="@(() => PickColor("purple"))"></div>
+				<div class="color saddlebrown" onclick="@(() => PickColor("saddlebrown"))"></div>
+				<div class="color gray" onclick="@(() => PickColor("gray"))"></div>
+				<div class="color lightblue" onclick="@(() => PickColor("lightblue"))"></div>
+				<div class="color lightgreen" onclick="@(() => PickColor("lightgreen"))"></div>
+				<div class="color cyan" onclick="@(() => PickColor("cyan"))"></div>
+				<div class="color lightcoral" onclick="@(() => PickColor("lightcoral"))"></div>
+				<div class="color violet" onclick="@(() => PickColor("violet"))"></div>
+				<div class="color yellow" onclick="@(() => PickColor("yellow"))"></div>
+				<div class="color white" onclick="@(() => PickColor("white"))"></div>
+			</div>
+
+			<div class="button back" onclick="@(() => TogglePalette())">Back</div>
+		</div>
 	</div>
 </root>
 
