--- a/Code/UI/MainMenu.razor
+++ b/Code/UI/MainMenu.razor
@@ -27,10 +27,10 @@
 						<label class="name">Pong for Two</label>
 					</div>
 
-					<div class="button">
+					@* <div class="button">
 						<img class="icon" src="" alt="p44"/>
 						<label class="name">Pong for Four</label>
-					</div>
+					</div> *@
 				</div>
 				
 
@@ -73,7 +73,7 @@
 					<div class="color gray" onclick="@(() => PickColor("gray"))"></div>
 					<div class="color lightblue" onclick="@(() => PickColor("lightblue"))"></div>
 					<div class="color lightgreen" onclick="@(() => PickColor("lightgreen"))"></div>
-					<div class="color lightcyan" onclick="@(() => PickColor("cyan"))"></div>
+					<div class="color cyan" onclick="@(() => PickColor("cyan"))"></div>
 					<div class="color lightcoral" onclick="@(() => PickColor("lightcoral"))"></div>
 					<div class="color violet" onclick="@(() => PickColor("violet"))"></div>
 					<div class="color yellow" onclick="@(() => PickColor("yellow"))"></div>
