--- a/Code/UI/LobbyMenu.razor.scss
+++ b/Code/UI/LobbyMenu.razor.scss
@@ -232,6 +232,56 @@ LobbyMenu
 			}
 		}
 	}
+}
+
+.footer
+{
+	padding: 80px, 5%;
+	flex-direction: row;
+	display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+	bottom: 50px;
+	
+	.left
+	{
+		gap: 10px;
+	}
+	
+	.button
+	{
+		padding: 30px, 40px;
+		border-radius: 5px;
+		// background-color: #000000;
+		cursor: pointer;
+		
+		&.play
+		{
+			&:hover
+			{
+				background-color: rgba(23, 115, 190, 0.6);
+			}
+			
+			&:active
+			{
+				background-color: rgba(23, 115, 190, 1);
+			}
+		}
+		
+		&.exit
+		{
+			&:hover
+			{
+				background-color: rgba(200, 26, 26, 0.6);
+			}
+			
+			&:active
+			{
+				background-color: rgba(200, 26, 26, 1);
+			}
+		}
+	}
+}
 
 	.panel_background
 	{
@@ -314,7 +364,7 @@ LobbyMenu
 					&.lightgreen{
 						background-color: #70d972;
 					}
-					&.lightcyan{
+					&.cyan{
 						background-color: #55FFFF;
 					}
 					&.lightcoral{
@@ -338,53 +388,3 @@ LobbyMenu
 			opacity: 0;
 		}
 	}
-}
-
-.footer
-{
-	padding: 80px, 5%;
-	flex-direction: row;
-	display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-	bottom: 50px;
-	
-	.left
-	{
-		gap: 10px;
-	}
-
-	.button
-	{
-		padding: 30px, 40px;
-		border-radius: 5px;
-		// background-color: #000000;
-		cursor: pointer;
-		
-		&.play
-		{
-			&:hover
-			{
-				background-color: rgba(23, 115, 190, 0.6);
-			}
-
-			&:active
-			{
-				background-color: rgba(23, 115, 190, 1);
-			}
-		}
-		
-		&.exit
-		{
-			&:hover
-			{
-				background-color: rgba(200, 26, 26, 0.6);
-			}
-
-			&:active
-			{
-				background-color: rgba(200, 26, 26, 1);
-			}
-		}
-	}
-}
